translation-tool/inputs/source_meta/objects/HughesSvc_ProviderGroupCredentials__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings will store the group login credentials and the encrypted password</description>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encrypted_Password__c</fullName>
        <label>Encrypted Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Login__c</fullName>
        <label>Group Login</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <label>Interface</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Group__c</fullName>
        <label>Provider Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>HughesSvc_ProviderGroupCredentials</label>
</CustomObject>